realize that optimization problem is non-linear and needs an actual solver, re-visit later

--- a/backend/app/Untitled.ipynb
+++ b/backend/app/Untitled.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "from typing import List, Tuple\n",
+    "from typing import List, Tuple, Callable\n",
     "\n",
     "from app.models.race import Race\n",
     "from app.models.race_entry import RaceEntry\n",
@@ -29,31 +29,24 @@
     "import random\n",
     "from pydantic import BaseModel\n",
     "from decimal import Decimal\n",
-    "\n"
+    "\n",
+    "from app.raceday.bet_strategy.dr_z_eq import get_best_place_show_bets_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "177b4701-4c52-4be1-80b3-2e5d4b658426",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "from typing import List, Tuple\n",
-    "\n",
-    "from app.models.race import Race\n",
-    "from app.models.race_entry import RaceEntry\n",
-    "import hyperopt\n",
-    "from pydantic import BaseModel\n",
-    "\n",
     "# Track Payback (1 - (track take % / 100))\n",
     "# This assumes 17% track take\n",
     "Q = 0.83\n",
     "\n",
     "# Based on Dr. Z's place-show optimization formula\n",
     "\n",
-    "def get_place_show_all_utility(race: Race, place_outlay: float, show_outlay: float, total_wealth: float) -> float:\n",
+    "def get_place_show_all_utility(race: Race, p_l: Callable, s_l: Callable, total_wealth: float) -> float:\n",
     "    entries: List[RaceEntry] = race.active_entries()\n",
     "\n",
     "    total: float = 0\n",
@@ -77,6 +70,7 @@
     "                q_j = 1 / entries[j].latest_odds()\n",
     "                q_k = 1 / entries[k].latest_odds()\n",
     "                \n",
+    "                # TODO: Is there a better alternative to harville probability?\n",
     "                harville_prob_place_show = (q_i * q_j * q_k) /  ((1-q_i) * (1-q_i-q_j))\n",
     "                rebate = calc_rebate(race, entries, place_outlay, show_outlay, i, j, k, total_wealth)\n",
     "                \n",
@@ -132,7 +126,12 @@
     "    \n",
     "    total = (place_bet_return * place_bet_effect) + (show_bet_return * show_bet_effect) + (w0 - sum_s_l - sum_p_l)\n",
     "\n",
-    "    assert total > 0, f\"domain error: pl={p_l(0)}; sl={s_l(0)}; ({place_bet_return} * {place_bet_effect} = {place_bet_return * place_bet_effect}) + ({show_bet_return} * {show_bet_effect} = {show_bet_return * show_bet_effect}) + {w0} - {sum_s_l} - {sum_p_l} = {total}\"\n",
+    "    assert total > 0, (\n",
+    "        f\"domain error: pl={p_l(0)}; sl={s_l(0)}; \"\n",
+    "        f\"({place_bet_return} * {place_bet_effect} = {place_bet_return * place_bet_effect})\" \n",
+    "        f\" + ({show_bet_return} * {show_bet_effect} = {show_bet_return * show_bet_effect})\"\n",
+    "        f\" + {w0} - {sum_s_l} - {sum_p_l} = {total}\"\n",
+    "    )\n",
     "    \n",
     "    return total\n",
     "\n",
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f75a8921-1c21-4136-abc2-7e14f7530518",
    "metadata": {},
    "outputs": [],
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ada88637-ae33-43a5-8101-f78b24118d7e",
    "metadata": {},
    "outputs": [
@@ -211,8 +210,8 @@
      "output_type": "stream",
      "text": [
       "1.0\n",
-      "<RaceEntry(id=227341,name='Questionable Latte',program_no='5',win_pool_total=309160.0,place_pool_total=496436.0,show_pool_total=61145.0)> 3.416666666666667\n",
-      "1264366.0 2199880.0 1639238.0\n"
+      "<RaceEntry(id=231458,name='Resolution Tree',program_no='10',win_pool_total=273092.1511627907,place_pool_total=273092.1511627907,show_pool_total=273092.1511627907,odds=6.88)>\n",
+      "1878874.0000000002 1878874.0000000002 1878874.0000000002\n"
      ]
     }
    ],
@@ -223,13 +222,13 @@
     "print(sum([1/entry.latest_odds() for entry in race.active_entries()]))\n",
     "entries_sorted = race.entries.copy()\n",
     "entries_sorted.sort(key=lambda x: x.latest_odds())\n",
-    "print(entries_sorted[0], entries_sorted[0].latest_odds())\n",
+    "print(entries_sorted[0])\n",
     "print(race.win_pool_total, race.place_pool_total, race.show_pool_total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "ef67f4df-bc01-43b6-8deb-8ed95dd71c81",
    "metadata": {},
    "outputs": [
@@ -237,8 +236,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 216.44trial/s, best loss: -4.655270648630432]\n"
+      "15\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:02<00:00, 18.64trial/s, best loss: -4.4441284366783025]\n"
      ]
     }
    ],
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "db7029f3-dcf8-484a-a6b8-74fc97749200",
    "metadata": {},
    "outputs": [
@@ -257,16 +256,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total_outlay=100.0 place_outlay=2.0192486154080265 show_outlay=8.26523135780229 expected_value=4.655270648630432\n"
+      "total_outlay=100.0 place_outlay=2.048363823265843 show_outlay=2.023942262233154 expected_value=4.4441284366783025\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "6"
+       "15"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,28 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "21e90678-0a42-456b-8826-c16917fc91b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.424786653698895"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_place_show_all_utility(race, best.place_outlay, best.show_outlay, 200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "55e57a0f-51f4-4176-99f5-c8260ace93d2",
    "metadata": {},
    "outputs": [],
@@ -309,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "0422359b-2362-4d01-9734-37308a64e4bb",
    "metadata": {},
    "outputs": [],
@@ -321,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "b5d80f8b-598e-4436-bf72-3e04bd3f366b",
    "metadata": {},
    "outputs": [],
@@ -331,25 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "03d3037b-a740-4a2f-8921-a7777149ff50",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.7128997383089644 5.2196959930383775 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pb.avg_reward(), pb.max_reward(), pb.cost())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "fe4fa393-c691-46bd-a83c-21069d91de44",
    "metadata": {},
    "outputs": [],
@@ -359,70 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "12207de0-984b-40f7-bae4-b84027c344b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.4346421290961975"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_place_reward(race, [entries_sorted[0], entries_sorted[1]], entries_sorted[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "026994c5-18e3-4810-a23e-754c235273a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.303617085071007"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_show_reward(race, entries_sorted[0], entries_sorted[1], entries_sorted[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "85b26d9b-6d43-4fc2-963c-7dcffb21dfea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.332424863053084"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_avg_show_reward(race)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "dc40fc23-5fbf-4131-95ab-7e44d7295d03",
    "metadata": {},
    "outputs": [
@@ -430,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 208.58trial/s, best loss: -3.8865448640250584]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:01<00:00, 30.43trial/s, best loss: -4.532887551122606]\n"
      ]
     }
    ],
@@ -440,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "16bc1a7a-56f6-423d-94d2-a191103b952b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "186.5541534732028"
+       "471.420305316751"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,17 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "8d0f5098-8cb0-4ea9-b737-c0be784da41a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<PlaceBet(cost=2.055661112551471, min_reward=0, avg_reward=0.18014380420327905, max_reward=24.23503113889233)>, <PlaceBet(cost=2.055661112551471, min_reward=0, avg_reward=0.6485176951318047, max_reward=20.486941302836918)>, <ShowBet(cost=2.2240020859012506, min_reward=0, avg_reward=0.11123624610985443, max_reward=15.199141090192878)>, <ShowBet(cost=2.2240020859012506, min_reward=0, avg_reward=0.40045048599547595, max_reward=12.104865743984297)>, <ShowBet(cost=2.2240020859012506, min_reward=0, avg_reward=0.1557307445537962, max_reward=11.549412844129343)>]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "53.03505778130957"
+       "94.35872060284247"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,17 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "f8c3c721-4353-45d9-8fc4-53b42c850d11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "88.0"
+       "120.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
